--- a/scv2/templates/messages.html
+++ b/scv2/templates/messages.html
@@ -1,8 +1,8 @@
 <!--Alertas-->
-{% if error %}
+{% for message in messages %}
     <div class="mt-3 alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
         <strong>Erro:</strong>
-        {{ error }}
+        {{ message }}
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
-{% endif %}
+{% endfor %}
