--- a/scv2/templates/menu.html
+++ b/scv2/templates/menu.html
@@ -24,7 +24,7 @@
                         <li><a class="dropdown-item" href="{% url "viagens:viagens-list" %}">Listar (Geral)</a></li>
                         <div class="dropdown-divider"></div>
                         <li><a class="dropdown-item" href="{% url "viagens:viagens-list-Pend" %}">Listar (Pendentes)</a></li>
-                        <li><a class="dropdown-item" href="{% url "viagens:viagens-list-PADM" %}">Listar (Pendentes ADM)</a></li>
+{#                        <li><a class="dropdown-item" href="{% url "viagens:viagens-list-PADM" %}">Listar (Pendentes ADM)</a></li>#}
                     </ul>
                 </li>
                 <li class="nav-item  dropdown">
