--- a/viagens/templates/viagens/realizar_viagem.html
+++ b/viagens/templates/viagens/realizar_viagem.html
@@ -53,7 +53,7 @@
                 </div>
             </div>
             <button type="submit" class="btn btn-secondary" id="id_salvar"><i class="bi bi-floppy"></i> Salvar</button>
-            <a href="{% url 'viagens:viagens-list-PADM' %}" class="btn btn-secondary"><i class="bi bi-arrow-counterclockwise"></i> Voltar</a>
+            <a href="{% url 'viagens:viagens-list-Pend' %}" class="btn btn-secondary"><i class="bi bi-arrow-counterclockwise"></i> Voltar</a>
         </form>
 
 {% endblock %}
