--- a/viagens/templates/viagens/impressao.html
+++ b/viagens/templates/viagens/impressao.html
@@ -49,7 +49,7 @@ style='font-size:18.0pt;line-height:100%'>Ordem de Movimentação da Viatura</sp
         border-left:none;padding:0cm 5.4pt 0cm 5.4pt'>
         <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><b><span
         style='font-size:8.0pt'>Unidade Administrativa:</span></b></p>
-        <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><b>&nbsp;</b><b>{{ viagem.funcionario_solicitante.setor }}</b></p>
+        <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><b></b><b>{{ viagem.funcionario_solicitante.setor }}</b></p>
         </td>
        </tr>
       </table>
@@ -62,7 +62,7 @@ style='font-size:18.0pt;line-height:100%'>Ordem de Movimentação da Viatura</sp
         padding:0cm 5.4pt 0cm 5.4pt'>
         <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><b><span
         style='font-size:8.0pt'>Destino:</span></b></p>
-        <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>&nbsp;{{ viagem.Destino }}</p>
+        <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>{{ viagem.Destino }}</p>
         </td>
         <td width=19 valign=top style='width:14.15pt;border:none;border-right:solid windowtext 1.0pt;
         padding:0cm 5.4pt 0cm 5.4pt'>
@@ -72,13 +72,13 @@ style='font-size:18.0pt;line-height:100%'>Ordem de Movimentação da Viatura</sp
         border-left:none;padding:0cm 5.4pt 0cm 5.4pt'>
         <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><b><span
         style='font-size:8.0pt'>Data da Solicitação:</span></b></p>
-        <p class=MsoNormal style='font-size:9.0pt; margin-bottom:0cm;line-height:normal'><b>&nbsp</b>{{viagem.DatahoraSolic_Format}}</p>
+        <p class=MsoNormal style='font-size:9.0pt; margin-bottom:0cm;line-height:normal'><b></b>{{viagem.DatahoraSolic_Format}}</p>
         </td>
         <td width=106 valign=top style='width:79.55pt;border:solid windowtext 1.0pt;
         border-left:none;padding:0cm 5.4pt 0cm 5.4pt'>
         <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><b><span
         style='font-size:8.0pt'>Data da Viagem:</span></b></p>
-        <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>&nbsp;<b>{{ viagem.Data_Viagem_Format }}  {{ viagem.Hora_Viagem }}</b></p>
+        <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><b>{{ viagem.Data_Viagem_Format }}  {{ viagem.Hora_Viagem }}</b></p>
         </td>
        </tr>
       </table>
@@ -91,7 +91,7 @@ style='font-size:18.0pt;line-height:100%'>Ordem de Movimentação da Viatura</sp
         padding:0cm 5.4pt 0cm 5.4pt'>
         <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><b><span
         style='font-size:8.0pt'>Objetivo:</span></b></p>
-        <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>&nbsp;{{ viagem.Objetivo }}</p>
+        <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>{{ viagem.Objetivo }}</p>
         </td>
         <td width=19 valign=top style='width:14.15pt;border:none;border-right:solid windowtext 1.0pt;
         padding:0cm 5.4pt 0cm 5.4pt'>
@@ -256,7 +256,7 @@ style='font-size:18.0pt;line-height:100%'>Ordem de Movimentação da Viatura</sp
     padding:0cm 5.4pt 0cm 5.4pt'>
     <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><b><span
     style='font-size:8.0pt'>Horário de Saída</span></b></p>
-    <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>&nbsp;</p>
+    <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>{{ viagem.Data_Hora_ini }}&nbsp;</p>
     </td>
     <td width=19 valign=top style='width:14.15pt;border:none;border-right:solid windowtext 1.0pt;
     padding:0cm 5.4pt 0cm 5.4pt'>
@@ -266,7 +266,8 @@ style='font-size:18.0pt;line-height:100%'>Ordem de Movimentação da Viatura</sp
     border-left:none;padding:0cm 5.4pt 0cm 5.4pt'>
     <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><b><span
     style='font-size:8.0pt'>Horário de Chegada:</span></b></p>
-    <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><b>&nbsp;</b></p>
+    <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'></p>
+ &nbsp;</b></p>
     </td>
    </tr>
   </table>
