--- a/viagens/templates/viagens/impressao.html
+++ b/viagens/templates/viagens/impressao.html
@@ -135,9 +135,6 @@ style='font-size:18.0pt;line-height:100%'>Ordem de Movimentação da Viatura</sp
     </tr>
 </table>
 
-
-
-<p class=MsoNormal><span style='font-size:1.0pt;line-height:107%'>&nbsp;</span></p>
    <table class=MsoTableGrid border=1 cellspacing=0 cellpadding=0 width=660
     style='width:500.00pt;margin-left:-10.8pt;border-collapse:collapse;border:
     none'>
@@ -238,8 +235,6 @@ style='font-size:18.0pt;line-height:100%'>Ordem de Movimentação da Viatura</sp
  </tr>
 </table>
 
-<p class=MsoNormal><span style='font-size:1.0pt;line-height:107%'>&nbsp;</span></p>
-
     <table class=MsoTableGrid border=1 cellspacing=0 cellpadding=0 width=660
     style='width:500.00pt;margin-left:-10.8pt;border-collapse:collapse;border:
     none'>
@@ -255,17 +250,17 @@ style='font-size:18.0pt;line-height:100%'>Ordem de Movimentação da Viatura</sp
     <td width=304 valign=top style='width:228.15pt;border:solid windowtext 1.0pt;
     padding:0cm 5.4pt 0cm 5.4pt'>
     <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><b><span
-    style='font-size:8.0pt'>Horário de Saída</span></b></p>
+    style='font-size:7.0pt'>Horário de Saída</span></b></p>
     <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>{{ viagem.Data_Hora_ini }}&nbsp;</p>
     </td>
     <td width=19 valign=top style='width:14.15pt;border:none;border-right:solid windowtext 1.0pt;
-    padding:0cm 5.4pt 0cm 5.4pt'>
+    padding:0cm 4.4pt 0cm 4.4pt'>
     <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>&nbsp;</p>
     </td>
     <td width=333 valign=top style='width:249.65pt;border:solid windowtext 1.0pt;
     border-left:none;padding:0cm 5.4pt 0cm 5.4pt'>
     <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><b><span
-    style='font-size:8.0pt'>Horário de Chegada:</span></b></p>
+    style='font-size:7.0pt'>Horário de Chegada:</span></b></p>
     <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'></p>
  &nbsp;</b></p>
     </td>
@@ -279,7 +274,6 @@ style='font-size:18.0pt;line-height:100%'>Ordem de Movimentação da Viatura</sp
     padding:0cm 5.4pt 0cm 5.4pt'>
     <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><b><span
     style='font-size:8.0pt'>Ocorrências:</span></b></p>
-    <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>&nbsp;</p>
     <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>&nbsp;</p>
     <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>&nbsp;</p>
     </td>
@@ -299,7 +293,6 @@ style='font-size:18.0pt;line-height:100%'>Ordem de Movimentação da Viatura</sp
     </td>
     <td width=19 valign=top style='width:14.15pt;border:none;border-right:solid windowtext 1.0pt;
     padding:0cm 5.4pt 0cm 5.4pt'>
-    <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>&nbsp;</p>
     </td>
     <td width=153 valign=top style='width:115.0pt;border:solid windowtext 1.0pt;
     border-left:none;padding:0cm 5.4pt 0cm 5.4pt'>
@@ -318,7 +311,22 @@ style='font-size:18.0pt;line-height:100%'>Ordem de Movimentação da Viatura</sp
 <p class=MsoNormal>&nbsp;</p>
 
 </div>
+    <div class="d-print-none">
+            <button onclick="printMe()" class="btn btn-secondary btn-sm"><i class="bi bi-printer"></i> Imprimir</button>
+            <button onclick="closeMe()" class="btn btn-secondary btn-sm"><i class="bi bi-x-square"></i> Fechar</button>
+        </div>
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        <script>
+            function printMe() {
+                window.print()
+            }
+
+            function closeMe() {
+                window.close()
+            }
+        </script>
+
 
 </body>
-
 </html>
