novas correções Impressao Campos

--- a/viagens/templates/viagens/impressao.html
+++ b/viagens/templates/viagens/impressao.html
@@ -39,7 +39,7 @@ style='font-size:18.0pt;line-height:100%'>Ordem de Movimentação da Viatura</sp
         padding:0cm 5.4pt 0cm 5.4pt'>
         <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><b><span
         style='font-size:8.0pt'>Solicitante:</span></b></p>
-        <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>&nbsp;<b>{{ viagem.funcionario_solicitante.usuario.first_name }} {{ viagem.funcionario_solicitante.usuario.last_name }}</b></p>
+        <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>&nbsp;<b>{{ viagem.funcionario_solicitante.usuario.first_name|default_if_none:"" }} {{ viagem.funcionario_solicitante.usuario.last_name|default_if_none:"" }}</b></p>
         </td>
         <td width=19 valign=top style='width:14.15pt;border:none;border-right:solid windowtext 1.0pt;
         padding:0cm 5.4pt 0cm 5.4pt'>
@@ -49,7 +49,7 @@ style='font-size:18.0pt;line-height:100%'>Ordem de Movimentação da Viatura</sp
         border-left:none;padding:0cm 5.4pt 0cm 5.4pt'>
         <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><b><span
         style='font-size:8.0pt'>Unidade Administrativa:</span></b></p>
-        <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><b></b><b>{{ viagem.funcionario_solicitante.setor }}</b></p>
+        <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><b></b><b>{{ viagem.funcionario_solicitante.setor|default_if_none:"" }}</b></p>
         </td>
        </tr>
       </table>
@@ -62,7 +62,7 @@ style='font-size:18.0pt;line-height:100%'>Ordem de Movimentação da Viatura</sp
         padding:0cm 5.4pt 0cm 5.4pt'>
         <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><b><span
         style='font-size:8.0pt'>Destino:</span></b></p>
-        <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>{{ viagem.Destino }}</p>
+        <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>{{ viagem.Destino|default_if_none:"" }}</p>
         </td>
         <td width=19 valign=top style='width:14.15pt;border:none;border-right:solid windowtext 1.0pt;
         padding:0cm 5.4pt 0cm 5.4pt'>
@@ -72,13 +72,13 @@ style='font-size:18.0pt;line-height:100%'>Ordem de Movimentação da Viatura</sp
         border-left:none;padding:0cm 5.4pt 0cm 5.4pt'>
         <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><b><span
         style='font-size:8.0pt'>Data da Solicitação:</span></b></p>
-        <p class=MsoNormal style='font-size:9.0pt; margin-bottom:0cm;line-height:normal'><b></b>{{viagem.DatahoraSolic_Format}}</p>
+        <p class=MsoNormal style='font-size:9.0pt; margin-bottom:0cm;line-height:normal'><b></b>{{viagem.DatahoraSolic_Format|default_if_none:""}}</p>
         </td>
         <td width=106 valign=top style='width:79.55pt;border:solid windowtext 1.0pt;
         border-left:none;padding:0cm 5.4pt 0cm 5.4pt'>
         <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><b><span
         style='font-size:8.0pt'>Data da Viagem:</span></b></p>
-        <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><b>{{ viagem.Data_Viagem_Format }}  {{ viagem.Hora_Viagem }}</b></p>
+        <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><b>{{ viagem.Data_Viagem_Format|default_if_none:"" }}  {{ viagem.Hora_Viagem|default_if_none:"" }}</b></p>
         </td>
        </tr>
       </table>
@@ -91,7 +91,7 @@ style='font-size:18.0pt;line-height:100%'>Ordem de Movimentação da Viatura</sp
         padding:0cm 5.4pt 0cm 5.4pt'>
         <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><b><span
         style='font-size:8.0pt'>Objetivo:</span></b></p>
-        <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>{{ viagem.Objetivo }}</p>
+        <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>{{ viagem.Objetivo|default_if_none:"" }}</p>
         </td>
         <td width=19 valign=top style='width:14.15pt;border:none;border-right:solid windowtext 1.0pt;
         padding:0cm 5.4pt 0cm 5.4pt'>
@@ -101,7 +101,7 @@ style='font-size:18.0pt;line-height:100%'>Ordem de Movimentação da Viatura</sp
         border-left:none;padding:0cm 5.4pt 0cm 5.4pt'>
         <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><b><span
         style='font-size:8.0pt'>Passageiros:</span></b></p>
-        <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><b>&nbsp;</b>{{ viagem.Passageiros }}</p>
+        <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><b>&nbsp;</b>{{ viagem.Passageiros|default_if_none:"" }}</p>
         </td>
        </tr>
       </table>
@@ -152,7 +152,7 @@ style='font-size:18.0pt;line-height:100%'>Ordem de Movimentação da Viatura</sp
     padding:0cm 5.4pt 0cm 5.4pt'>
     <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><b><span
     style='font-size:8pt'>Motorista:</span></b></p>
-    <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><b>{{ viagem.Motorista_viag }}<span
+    <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><b>{{ viagem.Motorista_viag|default_if_none:"" }}<span
     style='font-size:10.0pt'>&nbsp;</span></b></p>
     </td>
     <td width=19 valign=top style='width:14.15pt;border:none;border-right:solid windowtext 1.0pt;
@@ -164,7 +164,7 @@ style='font-size:18.0pt;line-height:100%'>Ordem de Movimentação da Viatura</sp
     border-left:none;padding:0cm 5.4pt 0cm 5.4pt'>
     <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><b><span
     style='font-size:8pt'>Veículo:</span></b></p>
-    <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><b>{{ viagem.Veiculo_viag }}<span
+    <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><b>{{ viagem.Veiculo_viag|default_if_none:"" }}<span
     style='font-size:10.0pt'>&nbsp;</span></b></p>
     </td>
    </tr>
@@ -179,21 +179,21 @@ style='font-size:18.0pt;line-height:100%'>Ordem de Movimentação da Viatura</sp
     <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><b><span
     style='font-size:8pt'>Km Saída:</span></b></p>
     <p class=MsoNormal style='margin-bottom:0cm;line-height:initial'><b><span
-    style='font-size:11.0pt'></span></b><b><center>{{ viagem.Km_Inicio }}</center></b></p>
+    style='font-size:11.0pt'></span></b><b><center>{{ viagem.Km_Inicio|default_if_none:"" }}</center></b></p>
     </td>
     <td width=142 valign=top style='width:106.35pt;border:solid windowtext 1.0pt;
     border-left:none;padding:0cm 5.4pt 0cm 5.4pt'>
     <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><b><span
     style='font-size:8pt'>Km Chegada:</span></b></p>
     <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><b><span
-    style='font-size:10.0pt'>&nbsp;</span></b></p>
+    style='font-size:10.0pt'>&nbsp;</span></b>{{ viagem.Km_Final|default_if_none:"" }}</p>
     </td>
     <td width=142 valign=top style='width:106.35pt;border:solid windowtext 1.0pt;
     border-left:none;padding:0cm 5.4pt 0cm 5.4pt'>
     <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><b><span
     style='font-size:8pt'>Km Rodados:</span></b></p>
     <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><b><span
-    style='font-size:10.0pt'>&nbsp;</span></b></p>
+    style='font-size:10.0pt'>&nbsp;</span></b>{{ viagem.km_rodado|default_if_none:"" }}</p>
     </td>
     <td width=19 valign=top style='width:14.15pt;border:none;padding:0cm 5.4pt 0cm 5.4pt'>
     <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><b><span
@@ -234,7 +234,6 @@ style='font-size:18.0pt;line-height:100%'>Ordem de Movimentação da Viatura</sp
   </td>
  </tr>
 </table>
-
     <table class=MsoTableGrid border=1 cellspacing=0 cellpadding=0 width=660
     style='width:500.00pt;margin-left:-10.8pt;border-collapse:collapse;border:
     none'>
@@ -251,7 +250,7 @@ style='font-size:18.0pt;line-height:100%'>Ordem de Movimentação da Viatura</sp
     padding:0cm 5.4pt 0cm 5.4pt'>
     <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><b><span
     style='font-size:7.0pt'>Horário de Saída</span></b></p>
-    <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>{{ viagem.Data_Hora_ini }}&nbsp;</p>
+    <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>{{ viagem.Datahora_ini_Format|default_if_none:""}}</p>
     </td>
     <td width=19 valign=top style='width:14.15pt;border:none;border-right:solid windowtext 1.0pt;
     padding:0cm 4.4pt 0cm 4.4pt'>
@@ -261,7 +260,7 @@ style='font-size:18.0pt;line-height:100%'>Ordem de Movimentação da Viatura</sp
     border-left:none;padding:0cm 5.4pt 0cm 5.4pt'>
     <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><b><span
     style='font-size:7.0pt'>Horário de Chegada:</span></b></p>
-    <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'></p>
+    <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>{{ viagem.Datahora_fim_Format|default_if_none:""}}</p>
  &nbsp;</b></p>
     </td>
    </tr>
@@ -270,12 +269,11 @@ style='font-size:18.0pt;line-height:100%'>Ordem de Movimentação da Viatura</sp
   <table class=MsoTableGrid border=1 cellspacing=0 cellpadding=0
    style='border-collapse:collapse;border:none'>
    <tr>
-    <td width=651 valign=top style='width:488.35pt;border:solid windowtext 1.0pt;
-    padding:0cm 5.4pt 0cm 5.4pt'>
+   <td width="651" valign=top style='width:488pt; height: 50pt; border:solid windowtext 1.0pt;
+        padding:0cm 5.4pt 0cm 5.4pt'>
     <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><b><span
     style='font-size:8.0pt'>Ocorrências:</span></b></p>
-    <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>&nbsp;</p>
-    <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>&nbsp;</p>
+     <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><b>&nbsp;</b>{{ viagem.Ocorrencias|default_if_none:"" }}</p>
     </td>
    </tr>
   </table>
